<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_new_user"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.rafaelarnosti.demointent.NewUserActivity">
    <EditText
    style="@style/inputs"
        android:id="@+id/etInformeUserName"
        android:hint="@string/txtInformeUserName"/>
    <EditText
        style="@style/inputs"
        android:id="@+id/etInformeName"
        android:hint="@string/txtInformeName"/>
    <EditText
        style="@style/inputs_senha"
        android:id="@+id/etInformeSenha"
        android:hint="@string/txtInformeSenha"/>
    <Button
        android:id="@+id/btCriar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtCriar"/>

</LinearLayout>
