<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.rafaelarnosti.demointent.LoginActivity">

    <EditText
        style="@style/inputs"
        android:id="@+id/etLogin"
        android:hint="@string/hintLogin"/>
    <EditText
        style="@style/inputs_senha"
        android:id="@+id/etSenha"
        android:hint="@string/hintSenha"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Conectar"
        android:id="@+id/btConectar"/>
    <TextView
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtUsuario"
        android:id="@+id/tvUsuario"
        android:gravity="center"
        android:clickable="true"
        android:textColor="@drawable/link"/>

</LinearLayout>
